--- a/PIDM_demo.ipynb
+++ b/PIDM_demo.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "Fn3wyRxPNU1K"
       },
@@ -10,12 +10,12 @@
       "source": [
         "#@title Install PIDM\n",
         "!pip install --upgrade --no-cache-dir gdown tensorfn\n",
-        "!gdown 1gBh_XDsMnmA8gA9XTowqLJmdRXjRDNWb && unzip pidm-demo.zip && rm pidm-demo.zip"
+        "!gdown 1gBh_XDsMnmA8gA9XTowqLJmdRXjRDNWb && unzip -o pidm-demo.zip && rm pidm-demo.zip"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
