--- a/PIDM_demo.ipynb
+++ b/PIDM_demo.ipynb
@@ -15,7 +15,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -261,7 +261,7 @@
         "obj = Predictor()\n",
         "\n",
         "### upload a source file\n",
-        "Path = list(files.upload().keys())[0] # Please check \"/content/data/\" for sample images for source file.\n",
+        "Path = list(files.upload().keys())[0] # Please check \"/content/pidm-demo/data/\" for sample images for source file.\n",
         "### OR enter the path \n",
         "#Path = \"data/deepfashion_256x256/target_edits/reference_img_5.png\"\n",
         "\n",
@@ -282,7 +282,7 @@
         "\n",
         "### upload a source file\n",
         "print (\"Upload a source image:\")\n",
-        "src = list(files.upload().keys())[0] # Please check \"data/\" for sample images for source file.\n",
+        "src = list(files.upload().keys())[0] # Please check \"/content/pidm-demo/data/\" for sample images for source file.\n",
         "### OR enter the path \n",
         "#src = \"data/deepfashion_256x256/target_edits/reference_img_5.png\"\n",
         "\n",
@@ -302,7 +302,7 @@
           "height": 403
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
