--- a/PIDM_demo.ipynb
+++ b/PIDM_demo.ipynb
@@ -1,16 +1,51 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "#<font face=\"Trebuchet MS\" size=\"5\">PIDM Demo<font color=\"#999\" size=\"4\">&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;</font><font color=\"#872\" size=\"4\">Person Image Synthesis via Denoising Diffusion Model (CVPR'23)</font><font color=\"#999\" size=\"4\">&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;</font><a href=\"https://github.com/ankanbhunia/PIDM\" target=\"_blank\"><font color=\"#F00\" size=\"4\">Github</font></a><font color=\"#999\" size=\"4\">&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;</font><a href=\"https://arxiv.org/abs/2211.12500\" target=\"_blank\"><font color=\"#F00\" size=\"4\">ArXiv</font></a>\n",
+        "\n",
+        "\n",
+        "<ol class=\"glist\" style=\"margin:0; padding:0; font-family: Arial, sans-serif; color:#495055; line-height:22px;\" align=\"left\" type=\"1\">\n",
+        "    <li>\n",
+        "        <a href=\"https://raw.githubusercontent.com/ankanbhunia/PIDM/main/Figures/intro1.png\" target=\"_blank\">\n",
+        "    <img src=\"https://raw.githubusercontent.com/ankanbhunia/PIDM/main/Figures/intro1.png\"></a>\n",
+        "    <p align=\"left\" \"font-size:5px;\">\n",
+        "Our model generalizes well to in-the-wild cases. The source style image (left-most, only ONE) in the above example is taken from an online e-commerce fashion site (<a href=\"https://www.myntra.com/dresses/antheaa/antheaa-women-gorgeous-red-floral-cinched-waist-dress/15797616/buy\">https://www.myntra.com/dresses/antheaa/antheaa-women-gorgeous-red-floral-cinched-waist-dress/15797616/</a> or <a href=\"https://www.etsy.com/in-en/listing/1321526690/women-gorgeous-red-floral-cinched-waist?gpla=1&gao=1&\">https://www.etsy.com/in-en/listing/1321526690/women-gorgeous-red-floral-cinched-waist?gpla=1&gao=1&</a>). PIDM successfully generates multiple pose representation of the given source image. \n",
+        "</p>\n",
+        "<br>\n",
+        "    </li>\n",
+        "    <li>\n",
+        "        <a href=\"https://raw.githubusercontent.com/ankanbhunia/PIDM/main/Figures/intro1.png\" target=\"_blank\">\n",
+        "    <img src=\"https://raw.githubusercontent.com/ankanbhunia/PIDM/main/Figures/intro2.png\"></a>\n",
+        "    </li>\n",
+        "    <p align=\"left\" \"font-size:5px;\">\n",
+        "Another example showcasing in-the-wild performance. Please click on the image to see the full-sized result. The source style image (left-most) in the above example is taken from <a href=\"https://www.myntra.com/dresses/kassually/kassually-peach-coloured--grey-geometric-printed-fit-and-flare-dress/10909190/buy\">https://www.myntra.com/dresses/kassually/kassually-peach-coloured--grey-geometric-printed-fit-and-flare-dress/10909190/</a>.\n",
+        "</p>\n",
+        "</ol>\n",
+        "\n",
+        "This colab notebook provides a quick example of pose control and apperance control with our pretrained models. "
+      ],
+      "metadata": {
+        "id": "v5Non7i7KTdu"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "Fn3wyRxPNU1K"
+        "id": "Fn3wyRxPNU1K",
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
-        "#@title Install PIDM\n",
+        "#@title Try is yourself ---> Install Libraries & Pretrained models\n",
+        "print (\"Installing Libraries...\")\n",
         "import os; os.system('pip install --upgrade --no-cache-dir gdown tensorfn')\n",
-        "!gdown 17zHRXEgEitzj3HfieuQztIvYXn8zajMT && unzip -o pidm-demo.zip && rm pidm-demo.zip"
+        "print (\"---> Successfully Installed.\")\n",
+        "print (\"Downloading PIDM models...\")\n",
+        "!gdown 17zHRXEgEitzj3HfieuQztIvYXn8zajMT && unzip -o pidm-demo.zip && rm pidm-demo.zip\n",
+        "print (\"---> Successfully Downloaded.\")"
       ]
     },
     {
