--- a/PIDM_demo.ipynb
+++ b/PIDM_demo.ipynb
@@ -39,7 +39,7 @@
       },
       "outputs": [],
       "source": [
-        "#@title Try is yourself ---> Install Libraries & Pretrained models\n",
+        "#@title Try it yourself ---> Install Libraries & Pretrained models\n",
         "print (\"Installing Libraries...\")\n",
         "import os; os.system('pip install --upgrade --no-cache-dir gdown tensorfn')\n",
         "print (\"---> Successfully Installed.\")\n",
