--- a/PIDM_demo.ipynb
+++ b/PIDM_demo.ipynb
@@ -44,7 +44,7 @@
         "import os; os.system('pip install --upgrade --no-cache-dir gdown tensorfn')\n",
         "print (\"---> Successfully Installed.\")\n",
         "print (\"Downloading PIDM models...\")\n",
-        "!gdown 17zHRXEgEitzj3HfieuQztIvYXn8zajMT && unzip -o pidm-demo.zip && rm pidm-demo.zip\n",
+        "os.system('gdown 17zHRXEgEitzj3HfieuQztIvYXn8zajMT && unzip -o pidm-demo.zip && rm pidm-demo.zip')\n",
         "print (\"---> Successfully Downloaded.\")"
       ]
     },
