--- a/PIDM_demo.ipynb
+++ b/PIDM_demo.ipynb
@@ -24,12 +24,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "Fn3wyRxPNU1K",
-        "cellView": "form"
+        "cellView": "form",
+        "outputId": "dc4e0943-30a9-4aea-bbb1-e6e1680a81ef",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Installing Libraries...\n",
+            "---> Successfully Installed.\n",
+            "Downloading PIDM models...\n",
+            "---> Successfully Downloaded.\n"
+          ]
+        }
+      ],
       "source": [
         "#@title Try it yourself ---> Install Libraries & Pretrained models\n",
         "print (\"Installing Libraries...\")\n",
@@ -289,7 +304,7 @@
         "obj = Predictor()\n",
         "\n",
         "### upload a source file\n",
-        "Path = list(files.upload().keys())[0] # Please check \"/content/pidm-demo/data/\" for sample images for source file.\n",
+        "Path = list(files.upload().keys())[0] # Please check \"/content/PIDM/data/\" for sample images for source file.\n",
         "### OR enter the path \n",
         "#Path = \"data/deepfashion_256x256/target_edits/reference_img_5.png\"\n",
         "\n",
@@ -310,13 +325,13 @@
         "\n",
         "### upload a source file\n",
         "print (\"Upload a source image:\")\n",
-        "src = list(files.upload().keys())[0] # Please check \"/content/pidm-demo/data/\" for sample images for source file.\n",
+        "src = list(files.upload().keys())[0] # Please check \"/content/PIDM/data/\" for sample images for source file.\n",
         "### OR enter the path \n",
         "#src = \"data/deepfashion_256x256/target_edits/reference_img_5.png\"\n",
         "\n",
-        "ref_img = \"data/deepfashion_256x256/target_edits/reference_img_61.png\"\n",
-        "ref_mask = \"data/deepfashion_256x256/target_mask/upper/reference_mask_61.png\"\n",
-        "ref_pose = \"data/deepfashion_256x256/target_pose/reference_pose_61.npy\"\n",
+        "ref_img = \"data/deepfashion_256x256/target_edits/reference_img_1.png\"\n",
+        "ref_mask = \"data/deepfashion_256x256/target_mask/upper/reference_mask_1.png\"\n",
+        "ref_pose = \"data/deepfashion_256x256/target_pose/reference_pose_1.npy\"\n",
         "\n",
         "obj.predict_appearance(image=src, ref_img = ref_img, ref_mask = ref_mask, ref_pose = ref_pose, sample_algorithm = 'ddim',  nsteps = 50)\n",
         "\n",
